[package]
description = "A library for building REST clients"
repository = "https://github.com/SimonPersson/ease"
documentation = "http://simonpersson.github.io/ease/ease/index.html"
name = "ease"
version = "0.4.1"
authors = ["Simon Persson <simon@flaskpost.org>"]
keywords = ["rest", "api", "client", "web"]
license = "MIT OR Apache-2.0"

[dependencies]
hyper = "0.7"
url = "0.5"
serde = "0.6"
serde_json = "0.6"

[features]
nightly = ["serde_macros"]

[dependencies.serde_macros]
version = "*"
optional = true

[[ example ]]
name = "json"
path = "examples/json.rs"

[[ example ]]
name = "strings"
path = "examples/strings.rs"
