[package]
description = "A library for building REST clients"
repository = "https://github.com/SimonPersson/ease"
documentation = "http://simonpersson.github.io/ease/ease/index.html"
name = "ease"
version = "0.6.1"
authors = ["Simon Persson <simon@flaskpost.org>"]
keywords = ["rest", "api", "client", "web"]
license = "MIT OR Apache-2.0"

[dependencies]
hyper = "^0.10.4"
url = "^1.1.1"
serde = "^0.9.9"
serde_json = "^0.9.8"

[dev-dependencies]
serde_derive = "0.9"

[[ example ]]
name = "json"
path = "examples/json.rs"

[[ example ]]
name = "strings"
path = "examples/strings.rs"
